run till exp v9, can run on all four datasets, still not better than random though

--- a/notebooks/aggregate_metric_semi_supervised.ipynb
+++ b/notebooks/aggregate_metric_semi_supervised.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "2db6067b-1e4e-4d3d-bafc-868530c394ca",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "05ce4786-0b24-4b9b-9cdf-3dfd40ae8aee",
    "metadata": {},
    "outputs": [],
@@ -704,7 +704,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
+   "id": "64923add-6c23-4592-80f2-42c761952d8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mpi3d_toy'        24\n",
+       "'dsprites_full'    24\n",
+       "'shapes3d'         14\n",
+       "Name: evaluation_config.dataset.name, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2['evaluation_config.dataset.name'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "aa55efe2-2a27-4df6-97de-f782e76e099b",
    "metadata": {},
    "outputs": [
@@ -712,75 +736,89 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'train_final_config.model.name': \"'s2_beta_vae'\", 'train_final_config.s2_vae.beta': 16, 'train_final_config.model.supervised_sampling_method': \"'highest_summed_uncertainty'\"}\n",
-      "filtered df shape is (10, 87)\n",
-      "filtered df shape is (10, 87)\n",
+      "{'train_final_config.dataset.name': \"'dsprites_full'\", 'train_final_config.model.supervised_sampling_method': \"'highest_summed_uncertainty'\"}\n",
+      "filtered df shape is (12, 88)\n",
+      "filtered df shape is (12, 88)\n",
       "metric evaluation_results.disentanglement results: \n",
-      " train_final_config.conv_encoder_dropout.dropout_rate   0.1   0.2   0.3   0.4  \\\n",
-      "train_final_config.s2_vae.num_stochastic_passes                                \n",
-      "8                                                     0.45  0.43  0.41  0.39   \n",
-      "32                                                    0.46  0.43  0.41  0.38   \n",
+      " train_final_config.conv_encoder_dropout.dropout_rate   0.1               0.5  \\\n",
+      "train_final_config.s2_vae.beta                          1     4     16    1    \n",
+      "train_final_config.supervised_loss.loss_fn                                     \n",
+      "'l2'                                                  0.34  0.33  0.18  0.28   \n",
+      "'xent'                                                0.21  0.37  0.45  0.27   \n",
       "\n",
-      "train_final_config.conv_encoder_dropout.dropout_rate   0.5  \n",
-      "train_final_config.s2_vae.num_stochastic_passes             \n",
-      "8                                                     0.38  \n",
-      "32                                                    0.38  \n",
+      "train_final_config.conv_encoder_dropout.dropout_rate              \n",
+      "train_final_config.s2_vae.beta                          4     16  \n",
+      "train_final_config.supervised_loss.loss_fn                        \n",
+      "'l2'                                                  0.29  0.28  \n",
+      "'xent'                                                0.31  0.38  \n",
       "metric evaluation_results.discrete_mig results: \n",
-      " train_final_config.conv_encoder_dropout.dropout_rate  0.1   0.2   0.3   0.4  \\\n",
-      "train_final_config.s2_vae.num_stochastic_passes                               \n",
-      "8                                                     0.3  0.27  0.26  0.25   \n",
-      "32                                                    0.3  0.27  0.27  0.27   \n",
+      " train_final_config.conv_encoder_dropout.dropout_rate   0.1               0.5  \\\n",
+      "train_final_config.s2_vae.beta                          1     4     16    1    \n",
+      "train_final_config.supervised_loss.loss_fn                                     \n",
+      "'l2'                                                  0.27  0.21  0.09  0.17   \n",
+      "'xent'                                                0.14  0.21  0.29  0.15   \n",
       "\n",
-      "train_final_config.conv_encoder_dropout.dropout_rate   0.5  \n",
-      "train_final_config.s2_vae.num_stochastic_passes             \n",
-      "8                                                     0.25  \n",
-      "32                                                    0.26  \n",
-      "{'train_final_config.model.name': \"'s2_beta_vae'\", 'train_final_config.s2_vae.beta': 16, 'train_final_config.model.supervised_sampling_method': \"'highest_summed_uncertainty_all_dims'\"}\n",
-      "filtered df shape is (10, 87)\n",
-      "filtered df shape is (10, 87)\n",
+      "train_final_config.conv_encoder_dropout.dropout_rate              \n",
+      "train_final_config.s2_vae.beta                          4     16  \n",
+      "train_final_config.supervised_loss.loss_fn                        \n",
+      "'l2'                                                  0.18  0.17  \n",
+      "'xent'                                                0.20  0.23  \n",
+      "{'train_final_config.dataset.name': \"'dsprites_full'\", 'train_final_config.model.supervised_sampling_method': \"'random'\"}\n",
+      "filtered df shape is (12, 88)\n",
+      "filtered df shape is (12, 88)\n",
       "metric evaluation_results.disentanglement results: \n",
-      " train_final_config.conv_encoder_dropout.dropout_rate   0.1   0.2   0.3   0.4  \\\n",
-      "train_final_config.s2_vae.num_stochastic_passes                                \n",
-      "8                                                     0.45  0.44  0.41  0.40   \n",
-      "32                                                    0.46  0.43  0.41  0.39   \n",
+      " train_final_config.conv_encoder_dropout.dropout_rate   0.1              0.5  \\\n",
+      "train_final_config.s2_vae.beta                          1    4     16    1    \n",
+      "train_final_config.supervised_loss.loss_fn                                    \n",
+      "'l2'                                                  0.33  0.2  0.37  0.33   \n",
+      "'xent'                                                0.28  0.4  0.48  0.35   \n",
       "\n",
-      "train_final_config.conv_encoder_dropout.dropout_rate   0.5  \n",
-      "train_final_config.s2_vae.num_stochastic_passes             \n",
-      "8                                                     0.38  \n",
-      "32                                                    0.38  \n",
+      "train_final_config.conv_encoder_dropout.dropout_rate              \n",
+      "train_final_config.s2_vae.beta                          4     16  \n",
+      "train_final_config.supervised_loss.loss_fn                        \n",
+      "'l2'                                                  0.32  0.33  \n",
+      "'xent'                                                0.35  0.40  \n",
       "metric evaluation_results.discrete_mig results: \n",
-      " train_final_config.conv_encoder_dropout.dropout_rate  0.1   0.2   0.3   0.4  \\\n",
-      "train_final_config.s2_vae.num_stochastic_passes                               \n",
-      "8                                                     0.3  0.27  0.26  0.28   \n",
-      "32                                                    0.3  0.25  0.25  0.26   \n",
+      " train_final_config.conv_encoder_dropout.dropout_rate   0.1               0.5  \\\n",
+      "train_final_config.s2_vae.beta                          1     4     16    1    \n",
+      "train_final_config.supervised_loss.loss_fn                                     \n",
+      "'l2'                                                  0.24  0.14  0.22  0.19   \n",
+      "'xent'                                                0.20  0.25  0.32  0.23   \n",
       "\n",
-      "train_final_config.conv_encoder_dropout.dropout_rate   0.5  \n",
-      "train_final_config.s2_vae.num_stochastic_passes             \n",
-      "8                                                     0.24  \n",
-      "32                                                    0.24  \n"
+      "train_final_config.conv_encoder_dropout.dropout_rate              \n",
+      "train_final_config.s2_vae.beta                          4     16  \n",
+      "train_final_config.supervised_loss.loss_fn                        \n",
+      "'l2'                                                  0.18  0.19  \n",
+      "'xent'                                                0.23  0.28  \n"
      ]
     }
    ],
    "source": [
     "metric_names = ['evaluation_results.disentanglement', 'evaluation_results.discrete_mig']\n",
     "# metric_names = ['train_final_results.loss', 'train_final_results.supervised_loss', 'train_final_results.kl_loss']\n",
-    "aggregated_results_path = \"/home/mwu34/disentanglement_lib/results_semi_mean_v7.json\"\n",
-    "df = pd.read_json(aggregated_results_path)\n",
+    "aggregated_results_path = \"/home/mwu34/disentanglement_lib/results_semi_mean_v8.json\"\n",
+    "df1 = pd.read_json(aggregated_results_path)\n",
+    "aggregated_results_path = \"/home/mwu34/disentanglement_lib/results_semi_mean_v9.json\"\n",
+    "df2 = pd.read_json(aggregated_results_path)\n",
+    "df = pd.concat([df1, df2])\n",
     "\n",
     "filter_dict = {}\n",
     "\n",
     "# s2_beta_vae \n",
-    "index_name = 'train_final_config.s2_vae.num_stochastic_passes'\n",
-    "column_name = 'train_final_config.conv_encoder_dropout.dropout_rate'\n",
-    "filter_dict[\"train_final_config.model.name\"] = \"'s2_beta_vae'\"\n",
-    "filter_dict[\"train_final_config.s2_vae.beta\"] = 16\n",
+    "index_name = 'train_final_config.supervised_loss.loss_fn'\n",
+    "column_names = [\n",
+    "    'train_final_config.conv_encoder_dropout.dropout_rate',\n",
+    "    'train_final_config.s2_vae.beta',\n",
+    "]\n",
+    "# filter_dict[\"train_final_config.model.name\"] = \"'s2_beta_vae'\"\n",
+    "filter_dict[\"train_final_config.dataset.name\"] = \"'dsprites_full'\"\n",
     "\n",
     "\n",
     "criteria_names = df[\"train_final_config.model.supervised_sampling_method\"].unique()\n",
     "for criterion in criteria_names:\n",
     "    filter_dict[\"train_final_config.model.supervised_sampling_method\"] = criterion\n",
     "    print(filter_dict)\n",
-    "    exp_results, df_filtered = aggregate_metric_results(df, index_name, column_name, metric_names, df_filter_dict=filter_dict)\n",
+    "    exp_results, df_filtered = aggregate_metric_results(df, index_name, column_names, metric_names, df_filter_dict=filter_dict)\n",
     "    for metric in metric_names:\n",
     "        print(f\"metric {metric} results: \\n {exp_results[metric]}\")"
    ]
@@ -788,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbeafe6a-1c9b-4d10-a54f-7867e02715e2",
+   "id": "bfe6c5ce-e78b-4c8f-bc28-c3174c546547",
    "metadata": {},
    "outputs": [],
    "source": []
