--- a/notebooks/dropout_uncertainty.ipynb
+++ b/notebooks/dropout_uncertainty.ipynb
@@ -128,6 +128,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "id": "f9aadac0-6094-481d-a336-ce74e65171b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([737280., 245760.,  40960.,   1024.,     32.,      1.])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dsprites.factor_bases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "8dcc0a19-52d2-42f4-92d5-29d27362bd1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  3,  6, 40, 32, 32])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dsprites.factor_sizes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6c1e0a01-32d7-48e9-87a2-cb9b19f6fef7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "small_factor_sizes = dsprites.factor_sizes[1:]\n",
+    "small_factor_bases = np.prod(small_factor_sizes) / np.cumprod(\n",
+    "            small_factor_sizes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d17f1f90-e467-4e26-bd08-997c7bc7e1d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([245760.,  40960.,   1024.,     32.,      1.])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "small_factor_bases"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "id": "77f6a352-60f3-48ef-af82-146efeab07cf",
    "metadata": {},
