generate dropout_mean at the end of training, notebook script to compute mig

--- a/notebooks/aggregate_metric_semi_supervised.ipynb
+++ b/notebooks/aggregate_metric_semi_supervised.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "2db6067b-1e4e-4d3d-bafc-868530c394ca",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "05ce4786-0b24-4b9b-9cdf-3dfd40ae8aee",
    "metadata": {},
    "outputs": [],
@@ -824,9 +824,211 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "189337ed-9ee3-4b7d-953b-3e55068cde37",
+   "metadata": {},
+   "source": [
+    "#### exp v10: core-set greedy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c61e8205-2f5e-4415-a0c9-df009a18b1ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['postprocess_results.elapsed_time', 'postprocess_results.uuid',\n",
+       "       'evaluation_config.dataset.name',\n",
+       "       'evaluation_config.dataset.num_training_data',\n",
+       "       'evaluation_config.dataset.split_method',\n",
+       "       'evaluation_config.dataset.train_with_full_dataset',\n",
+       "       'evaluation_config.dci.batch_size', 'evaluation_config.dci.num_test',\n",
+       "       'evaluation_config.dci.num_train',\n",
+       "       'evaluation_config.evaluation.evaluation_fn',\n",
+       "       'evaluation_config.evaluation.name',\n",
+       "       'evaluation_config.evaluation.random_seed',\n",
+       "       'train_final_config.vae/AdamOptimizer.beta1',\n",
+       "       'train_final_config.vae/AdamOptimizer.beta2',\n",
+       "       'train_final_config.vae/AdamOptimizer.epsilon',\n",
+       "       'train_final_config.vae/AdamOptimizer.learning_rate',\n",
+       "       'train_final_config.vae/AdamOptimizer.name',\n",
+       "       'train_final_config.vae/AdamOptimizer.use_locking',\n",
+       "       'train_final_config.annealer.anneal_fn',\n",
+       "       'train_final_config.annealer.iteration_threshold',\n",
+       "       'train_final_config.bernoulli_loss.subtract_true_image_entropy',\n",
+       "       'train_final_config.conv_encoder_dropout.dropout_rate',\n",
+       "       'train_final_config.conv_encoder_dropout.num_parameters_scale',\n",
+       "       'train_final_config.dataset.name',\n",
+       "       'train_final_config.dataset.num_training_data',\n",
+       "       'train_final_config.dataset.split_method',\n",
+       "       'train_final_config.dataset.train_with_full_dataset',\n",
+       "       'train_final_config.decoder.decoder_fn',\n",
+       "       'train_final_config.deconv_decoder.num_parameters_scale',\n",
+       "       'train_final_config.encoder.encoder_fn',\n",
+       "       'train_final_config.encoder.num_latent',\n",
+       "       'train_final_config.export_as_tf_hub.drop_collections',\n",
+       "       'train_final_config.l2.learn_scale',\n",
+       "       'train_final_config.labeller.labeller_fn',\n",
+       "       'train_final_config.model.batch_size', 'train_final_config.model.model',\n",
+       "       'train_final_config.model.model_num',\n",
+       "       'train_final_config.model.model_seed', 'train_final_config.model.name',\n",
+       "       'train_final_config.model.num_checkpoints',\n",
+       "       'train_final_config.model.num_labelled_samples',\n",
+       "       'train_final_config.model.supervised_batch_size',\n",
+       "       'train_final_config.model.supervised_data_seed',\n",
+       "       'train_final_config.model.supervised_sampling_method',\n",
+       "       'train_final_config.model.train_percentage',\n",
+       "       'train_final_config.model.training_steps',\n",
+       "       'train_final_config.model.uncertainty_method',\n",
+       "       'train_final_config.model.unsupervised_data_seed',\n",
+       "       'train_final_config.reconstruction_loss.activation',\n",
+       "       'train_final_config.reconstruction_loss.loss_fn',\n",
+       "       'train_final_config.s2_vae.beta',\n",
+       "       'train_final_config.s2_vae.factor_sizes',\n",
+       "       'train_final_config.s2_vae.gamma_sup',\n",
+       "       'train_final_config.s2_vae.num_stochastic_passes',\n",
+       "       'train_final_config.supervised_loss.loss_fn',\n",
+       "       'train_final_config.vae_optimizer.learning_rate',\n",
+       "       'train_final_config.vae_optimizer.optimizer_fn',\n",
+       "       'train_final_results.elbo', 'train_final_results.kl_loss',\n",
+       "       'train_final_results.loss', 'train_final_results.reconstruction_loss',\n",
+       "       'train_final_results.regularizer',\n",
+       "       'train_final_results.supervised_loss',\n",
+       "       'train_final_results.global_step', 'train_final_results.elapsed_time',\n",
+       "       'train_final_results.uuid', 'evaluation_results.informativeness_train',\n",
+       "       'evaluation_results.informativeness_test',\n",
+       "       'evaluation_results.disentanglement', 'evaluation_results.completeness',\n",
+       "       'evaluation_results.elapsed_time', 'evaluation_results.uuid',\n",
+       "       'postprocess_config.dataset.name',\n",
+       "       'postprocess_config.dataset.num_training_data',\n",
+       "       'postprocess_config.dataset.split_method',\n",
+       "       'postprocess_config.dataset.train_with_full_dataset',\n",
+       "       'postprocess_config.postprocess.name',\n",
+       "       'postprocess_config.postprocess.postprocess_fn',\n",
+       "       'postprocess_config.postprocess.random_seed', 'path',\n",
+       "       'evaluation_config.discretizer.discretizer_fn',\n",
+       "       'evaluation_config.discretizer.num_bins',\n",
+       "       'evaluation_config.mig.batch_size', 'evaluation_config.mig.num_train',\n",
+       "       'evaluation_results.discrete_mig',\n",
+       "       'evaluation_config.correlation.active_correlation',\n",
+       "       'train_final_config.correlation.active_correlation',\n",
+       "       'postprocess_config.correlation.active_correlation'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d428f3b3-5b53-4d58-bb49-bfef51ac78b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train_final_config.dataset.name': \"'dsprites_full'\", 'train_final_config.model.supervised_sampling_method': \"'core_set_greedy'\"}\n",
+      "filtered df shape is (12, 88)\n",
+      "filtered df shape is (12, 88)\n",
+      "metric evaluation_results.disentanglement results: \n",
+      " train_final_config.conv_encoder_dropout.dropout_rate   0.1               0.5  \\\n",
+      "train_final_config.s2_vae.beta                          1     4     16    1    \n",
+      "train_final_config.supervised_loss.loss_fn                                     \n",
+      "'l2'                                                  0.40  0.40  0.22  0.32   \n",
+      "'xent'                                                0.27  0.42  0.46  0.35   \n",
+      "\n",
+      "train_final_config.conv_encoder_dropout.dropout_rate              \n",
+      "train_final_config.s2_vae.beta                          4     16  \n",
+      "train_final_config.supervised_loss.loss_fn                        \n",
+      "'l2'                                                  0.32  0.30  \n",
+      "'xent'                                                0.37  0.39  \n",
+      "metric evaluation_results.discrete_mig results: \n",
+      " train_final_config.conv_encoder_dropout.dropout_rate   0.1               0.5  \\\n",
+      "train_final_config.s2_vae.beta                          1     4     16    1    \n",
+      "train_final_config.supervised_loss.loss_fn                                     \n",
+      "'l2'                                                  0.30  0.24  0.07  0.18   \n",
+      "'xent'                                                0.18  0.26  0.30  0.23   \n",
+      "\n",
+      "train_final_config.conv_encoder_dropout.dropout_rate              \n",
+      "train_final_config.s2_vae.beta                          4     16  \n",
+      "train_final_config.supervised_loss.loss_fn                        \n",
+      "'l2'                                                  0.19  0.18  \n",
+      "'xent'                                                0.21  0.28  \n",
+      "{'train_final_config.dataset.name': \"'dsprites_full'\", 'train_final_config.model.supervised_sampling_method': \"'random'\"}\n",
+      "filtered df shape is (12, 88)\n",
+      "filtered df shape is (12, 88)\n",
+      "metric evaluation_results.disentanglement results: \n",
+      " train_final_config.conv_encoder_dropout.dropout_rate   0.1              0.5  \\\n",
+      "train_final_config.s2_vae.beta                          1    4     16    1    \n",
+      "train_final_config.supervised_loss.loss_fn                                    \n",
+      "'l2'                                                  0.33  0.2  0.37  0.33   \n",
+      "'xent'                                                0.28  0.4  0.48  0.35   \n",
+      "\n",
+      "train_final_config.conv_encoder_dropout.dropout_rate              \n",
+      "train_final_config.s2_vae.beta                          4     16  \n",
+      "train_final_config.supervised_loss.loss_fn                        \n",
+      "'l2'                                                  0.32  0.33  \n",
+      "'xent'                                                0.35  0.40  \n",
+      "metric evaluation_results.discrete_mig results: \n",
+      " train_final_config.conv_encoder_dropout.dropout_rate   0.1               0.5  \\\n",
+      "train_final_config.s2_vae.beta                          1     4     16    1    \n",
+      "train_final_config.supervised_loss.loss_fn                                     \n",
+      "'l2'                                                  0.24  0.14  0.22  0.19   \n",
+      "'xent'                                                0.20  0.25  0.32  0.23   \n",
+      "\n",
+      "train_final_config.conv_encoder_dropout.dropout_rate              \n",
+      "train_final_config.s2_vae.beta                          4     16  \n",
+      "train_final_config.supervised_loss.loss_fn                        \n",
+      "'l2'                                                  0.18  0.19  \n",
+      "'xent'                                                0.23  0.28  \n"
+     ]
+    }
+   ],
+   "source": [
+    "metric_names = ['evaluation_results.disentanglement', 'evaluation_results.discrete_mig']\n",
+    "# metric_names = ['train_final_results.reconstruction_loss', 'train_final_results.supervised_loss', 'train_final_results.kl_loss']\n",
+    "aggregated_results_path = \"/home/mwu34/disentanglement_lib/results_semi_mean_v10.json\"\n",
+    "df1 = pd.read_json(aggregated_results_path)\n",
+    "aggregated_results_path = \"/home/mwu34/disentanglement_lib/results_semi_mean_v9.json\"\n",
+    "df2 = pd.read_json(aggregated_results_path)\n",
+    "df = pd.concat([df1, df2])\n",
+    "\n",
+    "filter_dict = {}\n",
+    "\n",
+    "# s2_beta_vae \n",
+    "index_name = 'train_final_config.supervised_loss.loss_fn'\n",
+    "column_names = [\n",
+    "    'train_final_config.conv_encoder_dropout.dropout_rate',\n",
+    "    'train_final_config.s2_vae.beta',\n",
+    "]\n",
+    "# filter_dict[\"train_final_config.model.name\"] = \"'s2_beta_vae'\"\n",
+    "filter_dict[\"train_final_config.dataset.name\"] = \"'dsprites_full'\"\n",
+    "\n",
+    "\n",
+    "criteria_names = df[\"train_final_config.model.supervised_sampling_method\"].unique()\n",
+    "for criterion in criteria_names:\n",
+    "    filter_dict[\"train_final_config.model.supervised_sampling_method\"] = criterion\n",
+    "    print(filter_dict)\n",
+    "    exp_results, df_filtered = aggregate_metric_results(df, index_name, column_names, metric_names, df_filter_dict=filter_dict)\n",
+    "    for metric in metric_names:\n",
+    "        print(f\"metric {metric} results: \\n {exp_results[metric]}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfe6c5ce-e78b-4c8f-bc28-c3174c546547",
+   "id": "0cc49b49-7054-4e59-bc25-9de4c3f45cd6",
    "metadata": {},
    "outputs": [],
    "source": []
