exp v11, xent_and_cov loss function

--- a/notebooks/aggregate_metric_semi_supervised.ipynb
+++ b/notebooks/aggregate_metric_semi_supervised.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2db6067b-1e4e-4d3d-bafc-868530c394ca",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "05ce4786-0b24-4b9b-9cdf-3dfd40ae8aee",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,10 @@
   {
    "cell_type": "markdown",
    "id": "b73d8bd8-a857-42c0-9c5b-edb6cfe9225f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### exp v1: 36 s2 beta vaes, 6 beta * 6 gamma_sup, random points"
    ]
@@ -145,6 +148,7 @@
    "cell_type": "markdown",
    "id": "bd149147-3a7d-4ee2-be6b-f076f1804f6e",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -223,6 +227,7 @@
    "cell_type": "markdown",
    "id": "9dc101da-ebb8-424b-afad-cba6dca66c48",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -288,7 +293,10 @@
   {
    "cell_type": "markdown",
    "id": "7ba670a5-5c89-40ec-b289-b14396380d92",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### exp 4: 80 models on 4 betaVAE variants"
    ]
@@ -509,7 +517,10 @@
   {
    "cell_type": "markdown",
    "id": "e4672c99-3ba2-44b2-96de-42993e7f524d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### exp v5: testing logvar and kl as criterion"
    ]
@@ -612,7 +623,10 @@
   {
    "cell_type": "markdown",
    "id": "ab43d696-5d75-4779-ba2f-07ee4da12d91",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### exp v6: merge multiple criteria"
    ]
@@ -697,7 +711,10 @@
   {
    "cell_type": "markdown",
    "id": "1daac0ae-0fff-43a8-a5a9-7891da2d0e69",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### exp v7 + v8: batch mode active learning / (random 10 * 100, highest_summed_logvar, highest_summed_logvar_all_dims)"
    ]
@@ -826,106 +843,12 @@
   {
    "cell_type": "markdown",
    "id": "189337ed-9ee3-4b7d-953b-3e55068cde37",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### exp v10: core-set greedy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "c61e8205-2f5e-4415-a0c9-df009a18b1ec",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['postprocess_results.elapsed_time', 'postprocess_results.uuid',\n",
-       "       'evaluation_config.dataset.name',\n",
-       "       'evaluation_config.dataset.num_training_data',\n",
-       "       'evaluation_config.dataset.split_method',\n",
-       "       'evaluation_config.dataset.train_with_full_dataset',\n",
-       "       'evaluation_config.dci.batch_size', 'evaluation_config.dci.num_test',\n",
-       "       'evaluation_config.dci.num_train',\n",
-       "       'evaluation_config.evaluation.evaluation_fn',\n",
-       "       'evaluation_config.evaluation.name',\n",
-       "       'evaluation_config.evaluation.random_seed',\n",
-       "       'train_final_config.vae/AdamOptimizer.beta1',\n",
-       "       'train_final_config.vae/AdamOptimizer.beta2',\n",
-       "       'train_final_config.vae/AdamOptimizer.epsilon',\n",
-       "       'train_final_config.vae/AdamOptimizer.learning_rate',\n",
-       "       'train_final_config.vae/AdamOptimizer.name',\n",
-       "       'train_final_config.vae/AdamOptimizer.use_locking',\n",
-       "       'train_final_config.annealer.anneal_fn',\n",
-       "       'train_final_config.annealer.iteration_threshold',\n",
-       "       'train_final_config.bernoulli_loss.subtract_true_image_entropy',\n",
-       "       'train_final_config.conv_encoder_dropout.dropout_rate',\n",
-       "       'train_final_config.conv_encoder_dropout.num_parameters_scale',\n",
-       "       'train_final_config.dataset.name',\n",
-       "       'train_final_config.dataset.num_training_data',\n",
-       "       'train_final_config.dataset.split_method',\n",
-       "       'train_final_config.dataset.train_with_full_dataset',\n",
-       "       'train_final_config.decoder.decoder_fn',\n",
-       "       'train_final_config.deconv_decoder.num_parameters_scale',\n",
-       "       'train_final_config.encoder.encoder_fn',\n",
-       "       'train_final_config.encoder.num_latent',\n",
-       "       'train_final_config.export_as_tf_hub.drop_collections',\n",
-       "       'train_final_config.l2.learn_scale',\n",
-       "       'train_final_config.labeller.labeller_fn',\n",
-       "       'train_final_config.model.batch_size', 'train_final_config.model.model',\n",
-       "       'train_final_config.model.model_num',\n",
-       "       'train_final_config.model.model_seed', 'train_final_config.model.name',\n",
-       "       'train_final_config.model.num_checkpoints',\n",
-       "       'train_final_config.model.num_labelled_samples',\n",
-       "       'train_final_config.model.supervised_batch_size',\n",
-       "       'train_final_config.model.supervised_data_seed',\n",
-       "       'train_final_config.model.supervised_sampling_method',\n",
-       "       'train_final_config.model.train_percentage',\n",
-       "       'train_final_config.model.training_steps',\n",
-       "       'train_final_config.model.uncertainty_method',\n",
-       "       'train_final_config.model.unsupervised_data_seed',\n",
-       "       'train_final_config.reconstruction_loss.activation',\n",
-       "       'train_final_config.reconstruction_loss.loss_fn',\n",
-       "       'train_final_config.s2_vae.beta',\n",
-       "       'train_final_config.s2_vae.factor_sizes',\n",
-       "       'train_final_config.s2_vae.gamma_sup',\n",
-       "       'train_final_config.s2_vae.num_stochastic_passes',\n",
-       "       'train_final_config.supervised_loss.loss_fn',\n",
-       "       'train_final_config.vae_optimizer.learning_rate',\n",
-       "       'train_final_config.vae_optimizer.optimizer_fn',\n",
-       "       'train_final_results.elbo', 'train_final_results.kl_loss',\n",
-       "       'train_final_results.loss', 'train_final_results.reconstruction_loss',\n",
-       "       'train_final_results.regularizer',\n",
-       "       'train_final_results.supervised_loss',\n",
-       "       'train_final_results.global_step', 'train_final_results.elapsed_time',\n",
-       "       'train_final_results.uuid', 'evaluation_results.informativeness_train',\n",
-       "       'evaluation_results.informativeness_test',\n",
-       "       'evaluation_results.disentanglement', 'evaluation_results.completeness',\n",
-       "       'evaluation_results.elapsed_time', 'evaluation_results.uuid',\n",
-       "       'postprocess_config.dataset.name',\n",
-       "       'postprocess_config.dataset.num_training_data',\n",
-       "       'postprocess_config.dataset.split_method',\n",
-       "       'postprocess_config.dataset.train_with_full_dataset',\n",
-       "       'postprocess_config.postprocess.name',\n",
-       "       'postprocess_config.postprocess.postprocess_fn',\n",
-       "       'postprocess_config.postprocess.random_seed', 'path',\n",
-       "       'evaluation_config.discretizer.discretizer_fn',\n",
-       "       'evaluation_config.discretizer.num_bins',\n",
-       "       'evaluation_config.mig.batch_size', 'evaluation_config.mig.num_train',\n",
-       "       'evaluation_results.discrete_mig',\n",
-       "       'evaluation_config.correlation.active_correlation',\n",
-       "       'train_final_config.correlation.active_correlation',\n",
-       "       'postprocess_config.correlation.active_correlation'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
    ]
   },
   {
@@ -1026,9 +949,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "23428b6e-74c7-4d49-b052-d8478c14dfb6",
+   "metadata": {},
+   "source": [
+    "#### exp v11: cov_and_xent loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0cc49b49-7054-4e59-bc25-9de4c3f45cd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train_final_config.dataset.name': \"'dsprites_full'\", 'train_final_config.model.supervised_sampling_method': \"'core_set_greedy'\"}\n",
+      "filtered df shape is (15, 56)\n",
+      "filtered df shape is (15, 56)\n",
+      "filtered df shape is (15, 56)\n",
+      "metric train_final_results.reconstruction_loss results: \n",
+      " train_final_config.s2_vae.beta                        1       4       16\n",
+      "train_final_config.supervised_loss.cov_loss_ratio                       \n",
+      "0.25                                               40.91   67.82  131.16\n",
+      "1.00                                               44.14   71.76  131.72\n",
+      "2.00                                               45.01   74.54  132.16\n",
+      "4.00                                               48.48   85.66  133.48\n",
+      "8.00                                               55.49  100.21  134.61\n",
+      "metric train_final_results.supervised_loss results: \n",
+      " train_final_config.s2_vae.beta                         1       4       16\n",
+      "train_final_config.supervised_loss.cov_loss_ratio                        \n",
+      "0.25                                               208.20  183.58  164.40\n",
+      "1.00                                               229.75  233.49  188.28\n",
+      "2.00                                               297.85  255.10  208.87\n",
+      "4.00                                               268.19  373.07  284.17\n",
+      "8.00                                               296.16  380.68  422.09\n",
+      "metric train_final_results.kl_loss results: \n",
+      " train_final_config.s2_vae.beta                        1      4     16\n",
+      "train_final_config.supervised_loss.cov_loss_ratio                    \n",
+      "0.25                                               24.07  11.73  5.78\n",
+      "1.00                                               23.37  11.59  5.76\n",
+      "2.00                                               23.97  11.26  5.75\n",
+      "4.00                                               22.83  10.26  5.73\n",
+      "8.00                                               21.38   9.21  5.70\n"
+     ]
+    }
+   ],
+   "source": [
+    "metric_names = ['train_final_results.reconstruction_loss', 'train_final_results.supervised_loss', 'train_final_results.kl_loss']\n",
+    "aggregated_results_path = \"/home/mwu34/disentanglement_lib/results_semi_v11.json\"\n",
+    "df = pd.read_json(aggregated_results_path)\n",
+    "\n",
+    "filter_dict = {}\n",
+    "\n",
+    "# s2_beta_vae \n",
+    "index_name = 'train_final_config.supervised_loss.cov_loss_ratio'\n",
+    "column_names = [\n",
+    "    'train_final_config.s2_vae.beta',\n",
+    "]\n",
+    "# filter_dict[\"train_final_config.model.name\"] = \"'s2_beta_vae'\"\n",
+    "filter_dict[\"train_final_config.dataset.name\"] = \"'dsprites_full'\"\n",
+    "\n",
+    "\n",
+    "criteria_names = df[\"train_final_config.model.supervised_sampling_method\"].unique()\n",
+    "for criterion in criteria_names:\n",
+    "    filter_dict[\"train_final_config.model.supervised_sampling_method\"] = criterion\n",
+    "    print(filter_dict)\n",
+    "    exp_results, df_filtered = aggregate_metric_results(df, index_name, column_names, metric_names, df_filter_dict=filter_dict)\n",
+    "    for metric in metric_names:\n",
+    "        print(f\"metric {metric} results: \\n {exp_results[metric]}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cc49b49-7054-4e59-bc25-9de4c3f45cd6",
+   "id": "a7042fb0-4366-447e-bdf1-2c978cbd71c6",
    "metadata": {},
    "outputs": [],
    "source": []
